[gd_scene load_steps=6 format=3 uid="uid://b7u4a1yc8v2ca"]

[ext_resource type="Script" path="res://ui/in_game_ui.gd" id="1_6jxtk"]
[ext_resource type="Texture2D" uid="uid://c8mjf4qkecmjo" path="res://pixel_sprites/ui/better_crosshair.png" id="1_ra756"]
[ext_resource type="Texture2D" uid="uid://ckgpdgddhg0we" path="res://pixel_sprites/ui/health.png" id="2_m2d3b"]
[ext_resource type="Texture2D" uid="uid://dyfomvy3gekqg" path="res://pixel_sprites/ui/item_frame.png" id="3_rmoro"]

[sub_resource type="LabelSettings" id="LabelSettings_e7143"]
font_size = 72

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6jxtk")

[node name="DamageSplash" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -46.0
offset_right = 75.0
offset_bottom = 49.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.301961)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="TextureRect" parent="CenterContainer"]
layout_mode = 2
texture = ExtResource("1_ra756")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 0
offset_left = 42.0
offset_top = 47.0
offset_right = 177.0
offset_bottom = 185.0

[node name="Health" type="TextureRect" parent="AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("2_m2d3b")

[node name="Label" type="Label" parent="AspectRatioContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_e7143")
horizontal_alignment = 1

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 47.0
offset_top = -181.0
offset_right = 183.0
offset_bottom = -42.0
grow_vertical = 0

[node name="Itemframe" type="TextureRect" parent="AspectRatioContainer2"]
layout_mode = 2
texture = ExtResource("3_rmoro")

[node name="AspectRatioContainer3" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 57.0
offset_top = -171.0
offset_right = 173.0
offset_bottom = -55.0
grow_vertical = 0

[node name="CurrentItem" type="TextureRect" parent="AspectRatioContainer3"]
layout_mode = 2

[node name="AspectRatioContainer4" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -63.0
offset_top = 21.0
offset_right = -23.0
offset_bottom = 61.0
grow_horizontal = 0

[node name="Label" type="Label" parent="AspectRatioContainer4"]
layout_mode = 2

[node name="FPSUpdateTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="FPSUpdateTimer" to="." method="_on_fps_update_timer_timeout"]
